<feat>: 建構基本資料

--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -5,10 +5,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .container {}
+        
+        .row {
+            display: flex;
+            justify-content: space-around;
+        }
+    </style>
 </head>
 
 <body>
-    sadf
+    <h3>關於我</h3>
+
+    <p>我本身是射手座，對於有興趣的事物往往會一頭熱的栽進去，探究其中的原因；因為這個特質，讓我在接觸到程式時，發現程式語言的奧妙與有趣的地方，也因為學習程式語言讓我在邏輯處理方面的思維有很大的躍進，對於處裡各方面的事務更有條理。</p>
+
+    <h3>工作經歷</h3>
+    <p>
+        碩士畢業後的第一份工作，是在協鴻工業股份有限公司擔任軟體工程師，主要負責 MES 功能開發、機台加值軟體開發以及 iFactory 機台資訊整合網頁。 從中學習到了與美編人員的溝通，跨單位的合作整合以及專案管制的進度控制，例如 MES，需要經常與資管組以及加工課的人員經常開會，並針對加工課的需求進行開發與設計，並與資管組共同討論資料的串接問題，例如兩個不同的資料庫之間要如何溝通與儲存等問題，也因為有這個經驗，在後續的跨單位合作往往都能很順利的合作。 在公司的這段期間，除了完成公司上面的事物之外，也會在下班閒暇之餘不斷的精進自己的實力，也因此得到公司外訓的機會，有機會接觸到人工智慧的領域，並且也於外訓上課的時候，發表了
+        AI 斷刀檢知的功能，有幸也得到了第二名的佳績，這當然不是我一個人的功勞，是專案成員的共同努力，當然在過程中會有不少的溝通與討論，但在公司專案管理的經驗支援之下，讓專案不只可以如期的完成，也得到該單位的肯定，榮獲第二名的殊榮。
+    </p>
+
+    <div class="container">
+        <div class="row">
+            <div class="skills">
+                <h4>Frontend</h4>
+                <ul>
+                    <li>HTML/CSS/JS ES6</li>
+                    <li>Vue.js</li>
+                    <li>BootstrapVue</li>
+                    <li>Axios</li>
+                    <li>jQuery</li>
+                    <li>Webpack</li>
+                </ul>
+            </div>
+            <div class="skills">
+                <h3>Backend</h3>
+                <ul>
+                    <li>Node.js Express</li>
+                    <li>WebScoket 串接 C# Server</li>
+                </ul>
+            </div>
+            <div class="skills">
+                <h4>SQL</h4>
+                <ul>
+                    <li>MySQL</li>
+                    <li>PostgreSQL</li>
+                    <li>MongoDB</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="skills">
+                <h4>Desktop App</h4>
+                <ul>
+                    <li>C# WPF</li>
+                    <li>Caliburn.Micro</li>
+                    <li>AutoFac</li>
+                    <li>Unit Test</li>
+                </ul>
+            </div>
+
+            <div class="skills">
+                <h4>AI</h4>
+                <ul>
+                    <li>機器學習</li>
+                    <li>深度學習</li>
+                </ul>
+            </div>
+
+            <div class="skills">
+                <h4>其他</h4>
+                <ul>
+                    <li>Linux</li>
+                    <li>Git</li>
+                    <li>WebSocket</li>
+                    <li>MQTT</li>
+                    <li>Vim</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <h3>特殊事蹟</h3>
+    <ul>
+        <li>2019 年-協鴻工業股份有限公司-上半年度優良員工</li>
+        <li>台灣人工智慧學校台中二期技術經理人班-AI斷刀檢知 （第二名）</li>
+    </ul>
+
+    <h3>未來規劃</h3>
+    <ul>
+        <li>IoT</li>
+        <li>Docket/K8s</li>
+        <li>MicroServices 架構</li>
+    </ul>
 </body>
 
 </html>
