--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="AboutMe">關於我</a>
-        <a href="#">作品集</a>
+        <a href="Portfolio">作品集</a>
         <a href="Faq">Faq</a>
     </div>
 
