<feat>: 關於我-新增工作項目

--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -25,6 +25,34 @@
         碩士畢業後的第一份工作，是在協鴻工業股份有限公司擔任軟體工程師，主要負責 MES 功能開發、機台加值軟體開發以及 iFactory 機台資訊整合網頁。 從中學習到了與美編人員的溝通，跨單位的合作整合以及專案管制的進度控制，例如 MES，需要經常與資管組以及加工課的人員經常開會，並針對加工課的需求進行開發與設計，並與資管組共同討論資料的串接問題，例如兩個不同的資料庫之間要如何溝通與儲存等問題，也因為有這個經驗，在後續的跨單位合作往往都能很順利的合作。 在公司的這段期間，除了完成公司上面的事物之外，也會在下班閒暇之餘不斷的精進自己的實力，也因此得到公司外訓的機會，有機會接觸到人工智慧的領域，並且也於外訓上課的時候，發表了
         AI 斷刀檢知的功能，有幸也得到了第二名的佳績，這當然不是我一個人的功勞，是專案成員的共同努力，當然在過程中會有不少的溝通與討論，但在公司專案管理的經驗支援之下，讓專案不只可以如期的完成，也得到該單位的肯定，榮獲第二名的殊榮。
     </p>
+    <div>
+        <h4>控制器加值軟體 HMI 開發</h4>
+        <ul>
+            <li>MES 系統開發</li>
+            <li>機台零件壽命維護</li>
+            <li>角度頭工件座標設定功能</li>
+            <li>加工程式循環編輯功能</li>
+            <li>加工程式檔案傳輸</li>
+        </ul>
+
+        <h4>iFactory 網站開發</h4>
+        <h5>前端</h5>
+        <ul>
+            <li>專案進度管制頁面開發</li>
+            <li>ZDT 零件壽命列表頁面</li>
+            <li>JobManager 工單管制系統</li>
+            <li>iFactory 機台稼動率顯示頁面開發</li>
+        </ul>
+
+        <h5>後端</h5>
+        <ul>
+            <li>機台加工程式傳輸功能</li>
+            <li>機台稼動率彙整計算</li>
+            <li>工單資訊與 ZDT 機台相關資訊</li>
+        </ul>
+
+    </div>
+
 
     <div class="container">
         <div class="row">
