--- a/Faq/index.html
+++ b/Faq/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="../public/styles/home.css">
     <title>Faq</title>
     <style>
         body {
@@ -52,10 +54,19 @@
         #others {
             background-color: yellowgreen;
         }
+        
+        .content {
+            padding: 10px 12px;
+            border: 1px solid #ccc;
+            height: 100%;
+        }
     </style>
 </head>
 
 <body>
+    <a class="home" href="/BingFengHung.github.io/">
+        <i class="material-icons">home</i>
+    </a>
     <div id="csharp" class="tabcontent">
         <h1>C#</h1>
         <p>C# / WPF 經驗談</p>
@@ -94,10 +105,11 @@
             <li>C# - GCHandle</li>
             <li>C# - Lay 延遲物件實例化</li>
             <li>C# sbyte 轉換為 string</li>
+            <li>WPF DataContext 與 Binding 之間的概念</li>
         </ul>
     </div>
 
-    <div id="javascript_cotnent" class="content">
+    <div id="javascript_content" class="content">
         <ul>
             <li>Node.js module.exports 與 exports 之間的差異</li>
             <li>JavaScript 函式多型實作</li>
@@ -111,7 +123,10 @@
     </div>
 
     <div id="linux_content" class="content">
-
+        <ul>
+            <li>Windows 使用 SCP 傳送檔案至 Linux</li>
+            <li>Linux 開機自動執行指令</li>
+        </ul>
     </div>
 
     <div id="others_content" class="content">
