--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../public/styles/home.css">
     <title>Document</title>
 </head>
 
 <body>
+    <link rel="stylesheet" href="public/styles/home.css">
     <h3>專案項目</h3>
     <h4>ZDT</h4>
     <p>本專案主要以機台零停機為目標，顯示機台零件剩餘使用壽命，讓使用者在機台壽命機將抵達前，提早進行保養與維護，避免機台因為停機造成稼動率下降；主要提供機台預設零件壽命，使用者亦可自行添加所需檢查保養項目。</p>
