<feat>: 加入個人首頁圖片並調整 menu bar 的位置在圖片上方

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <link rel="stylesheet" href="public/styles/home.css">
+    <a class="home" href="/BingFengHung.github.io/">
+        <i class="material-icons">home</i>
+    </a>
     <h3>專案項目</h3>
     <h4>ZDT</h4>
     <p>本專案主要以機台零停機為目標，顯示機台零件剩餘使用壽命，讓使用者在機台壽命機將抵達前，提早進行保養與維護，避免機台因為停機造成稼動率下降；主要提供機台預設零件壽命，使用者亦可自行添加所需檢查保養項目。</p>
