<feat>: 修改瀏覽器標籤顯示字串

--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>關於我</title>
     <link rel="stylesheet" href="../public/styles/header.css">
+    <link rel="stylesheet" href="../public/styles/footer.css">
     <link rel="stylesheet" href="../public/styles/home.css">
 
 
@@ -38,12 +39,6 @@
             background-color: white;
             width: 80%;
             margin: 0 auto;
-        }
-        
-        footer {
-            padding: 20px 0;
-            background: #adccc3;
-            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0px -10px 10px 0 rgba(0, 0, 0, .19);
         }
         
         .row {
@@ -86,13 +81,13 @@
 
     <header>
         <div class="logo">
-            <a href="./">BingFeng</a>
+            <a href="../">BingFeng</a>
         </div>
         <div class="topnav" id='myTopnav'>
             <a href='javascript:void(0);' class="icon" onclick="myFunction()">&#9776;</a>
-            <a href="AboutMe/">關於我</a>
-            <a href="Portfolio/">作品集</a>
-            <a href="Faq/">FAQ</a>
+            <a href="../AboutMe/">關於我</a>
+            <a href="../Portfolio/">作品集</a>
+            <a href="../Faq/">FAQ</a>
         </div>
     </header>
 
@@ -238,7 +233,6 @@
     </div>
     <footer>
         tHis
-
     </footer>
 
     <script>
