<feat>: 加入 markdown 方便文章呈現

--- a/Faq/Data/data.html
+++ b/Faq/Data/data.html
@@ -4,13 +4,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FAQ</title>
+    <link rel="stylesheet" href="../../public/styles/header.css">
+    <link rel="stylesheet" href="../../public/styles/footer.css">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+        
+        body {
+            background-color: #c5ded7;
+            padding: 0;
+            margin: 0;
+        }
+        
+        #container {
+            padding: 20px 30px;
+            background-color: white;
+            width: 80%;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 
 <body>
+    <header>
+        <div class="logo">
+            <a href="../">BingFeng</a>
+        </div>
+        <div class="topnav" id='myTopnav'>
+            <a href='javascript:void(0);' class="icon" onclick="myFunction()">&#9776;</a>
+            <a href="../../AboutMe/">關於我</a>
+            <a href="../../Portfolio/">作品集</a>
+            <a href="../../Faq/">FAQ</a>
+        </div>
+    </header>
+
+    <div id="container">
+
+    </div>
+
+    <footer>
+        tHis
+    </footer>
+
+    <script defer src="../../public/scripts/webcomponents-loader.min.js"></script>
+
+    <script type="module">
+        WebComponents.waitFor(() => { let el = document.createElement('script'); el.src = '../../public/scripts/zero-md.min.js'; document.head.appendChild(el); });
+    </script>
     <script>
-        fetch('/BingFengHung.github.io/Faq/Data/test.txt').then(x => x.text())
-            .then(y => alert(y));
+        const links = localStorage.getItem('links');
+        // mdElement.src = "../../" + links;
+        let div = document.getElementById('container');
+
+        let mdElement = document.createElement('zero-md')
+        mdElement.src = '../../' + links;
+
+        div.appendChild(mdElement);
+        // alert(mdElement.attributes);
+
+        // alert(mdElement)
     </script>
 </body>
 
