<fix>: 解決 markdown 圖片連結遺失問題

--- a/Faq/index.html
+++ b/Faq/index.html
@@ -220,7 +220,7 @@
             divElement.className = 'card';
 
             divElement.innerHTML = `
-               <a href='./Data/data.html' onclick='setValue("${link}");'>
+               <a href='../Articles/data.html' onclick='setValue("${link}");'>
                   <img src=../${imgSrc}>
                   <div class='card-container'>
                      <h4><b>${title}</b></h4>
