<feat>: 加入網頁 icon

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../public/styles/home.css">
-    <title>作品集</title>
+    <title>專案項目</title>
+    <link rel="stylesheet" href="/public/images/favico.ico">
     <link rel="stylesheet" href="../public/styles/header.css">
     <link rel="stylesheet" href="../public/styles/footer.css">
     <link rel="stylesheet" href="../public/styles/home.css">
