--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="public/styles/header.css">
     <title>BingFeng</title>
+    <link rel="stylesheet" href="/public/images/favico.ico">
     <style>
         * {
             box-sizing: border-box;
