--- a/Faq/index.html
+++ b/Faq/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="../public/styles/home.css">
     <title>FAQ</title>
+    <link rel="stylesheet" href="/public/images/favico.ico">
     <link rel="stylesheet" href="../public/styles/header.css">
     <link rel="stylesheet" href="../public/styles/footer.css">
     <link rel="stylesheet" href="../public/styles/home.css">
@@ -91,10 +92,17 @@
         
         .card img {
             width: 100%;
+            height: 150px;
         }
         
         .card:hover {
             box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2);
+        }
+
+        @media screen and (max-width: 300px) {
+            .content {
+                flex-wrap: nowrap;
+            }
         }
     </style>
 </head>
