<feat>: 近期文章排序處理

--- a/Faq/index.html
+++ b/Faq/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="../public/styles/home.css">
     <title>FAQ</title>
-    <link rel="stylesheet" href="/public/images/favico.ico">
+    <link rel="shortcut icon" href="../public/images/favico.ico">
     <link rel="stylesheet" href="../public/styles/header.css">
     <link rel="stylesheet" href="../public/styles/footer.css">
     <link rel="stylesheet" href="../public/styles/home.css">
@@ -98,8 +98,8 @@
         .card:hover {
             box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2);
         }
-
-        @media screen and (max-width: 300px) {
+        
+        @media screen and (max-width: 800px) {
             .content {
                 flex-wrap: nowrap;
             }
@@ -119,7 +119,7 @@
         <div class="topnav" id='myTopnav'>
             <a href='javascript:void(0);' class="icon" onclick="myFunction()">&#9776;</a>
             <a href="../AboutMe/">關於我</a>
-            <a href="../Portfolio/">作品集</a>
+            <a href="../Portfolio/">專案項目</a>
             <a href="../Faq/">FAQ</a>
         </div>
     </header>
