--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../public/styles/home.css">
     <title>專案項目</title>
-    <link rel="stylesheet" href="/public/images/favico.ico">
+    <link rel="shortcut icon" href="../public/images/favico.ico" type="image/ico">
     <link rel="stylesheet" href="../public/styles/header.css">
     <link rel="stylesheet" href="../public/styles/footer.css">
     <link rel="stylesheet" href="../public/styles/home.css">
@@ -42,7 +42,7 @@
         <div class="topnav" id='myTopnav'>
             <a href='javascript:void(0);' class="icon" onclick="myFunction()">&#9776;</a>
             <a href="../AboutMe/">關於我</a>
-            <a href="../Portfolio/">作品集</a>
+            <a href="../Portfolio/">專案項目</a>
             <a href="../Faq/">FAQ</a>
         </div>
     </header>
