<fix>: 調整 card 文章的樣式

--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -70,7 +70,11 @@
         .info li {
             list-style-type: none;
             margin: 20px 0;
-            font-size: 1.7rem;
+            font-size: 1.4rem;
+        }
+        
+        .motto li {
+            font-size: 1rem;
         }
     </style>
 </head>
@@ -87,7 +91,7 @@
         <div class="topnav" id='myTopnav'>
             <a href='javascript:void(0);' class="icon" onclick="myFunction()">&#9776;</a>
             <a href="../AboutMe/">關於我</a>
-            <a href="../Portfolio/">作品集</a>
+            <a href="../Portfolio/">專案項目</a>
             <a href="../Faq/">FAQ</a>
         </div>
     </header>
@@ -108,11 +112,18 @@
                     <li>Software Engineer</li>
                     <li>joe94008@gmail.com</li>
                 </ul>
-                <div>
-                    <p>
+                <ul class="motto">
+                    <li>
                         熱愛程式語言開發
-                    </p>
-                </div>
+                    </li>
+                    <li>
+                        熱愛程式語言開發
+                    </li>
+                    <li>
+                        熱愛程式語言開發
+                    </li>
+                    <li>因為很重要所以說三次</li>
+                </ul>
             </div>
         </div>
 
