--- a/Faq/index.html
+++ b/Faq/index.html
@@ -112,9 +112,15 @@
             box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2);
         }
         
-        @media screen and (max-width: 800px) {
+        @media screen and (max-width:800px) {
             .content {
+                flex-direction: column;
+                align-items: center;
                 flex-wrap: nowrap;
+            }
+
+            .card {
+                width: 80%;
             }
         }
     </style>
