--- a/Faq/index.html
+++ b/Faq/index.html
@@ -25,7 +25,7 @@
         }
         
         .container {
-            padding: 20px 30px;
+            padding: 20px 30px 50px;
             background-color: white;
             width: 80%;
             min-height: 84vh;
