--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -22,7 +22,7 @@
         }
         
         .container {
-            padding: 20px 30px;
+            padding: 20px 30px 50px;
             background-color: white;
             width: 80%;
             margin: 0 auto;
