<fix>: fix footer and go to home page

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <a class="home" href="/BingFengHung.github.io/">
+    <a class="home" href="../index.html/">
         <i class="material-icons">home</i>
     </a>
 
@@ -97,7 +97,6 @@
     </div>
 
     <footer>
-        tHis
     </footer>
 
     <script>
