--- a/Faq/index.html
+++ b/Faq/index.html
@@ -193,6 +193,15 @@
     </footer>
 
     <script>
+		function myFunction() {
+            let x = document.getElementById('myTopnav');
+
+            if (x.className === 'topnav') {
+                x.className += ' responsive';
+            } else {
+                x.className = 'topnav';
+            }
+        }
         getArticles();
 
         function getArticles() {
