--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -110,7 +110,7 @@
 </head>
 
 <body>
-    <a class="home" href="/BingFengHung.github.io/">
+    <a class="home" href="../index.html">
         <i class="material-icons">home</i>
     </a>
 
