--- a/Faq/index.html
+++ b/Faq/index.html
@@ -15,6 +15,7 @@
         * {
             margin: 0;
             padding: 0;
+			box-sizing: border-box;
         }
         
         body {
@@ -127,7 +128,7 @@
 </head>
 
 <body>
-    <a class="home" href="/BingFengHung.github.io/">
+    <a class="home" href="../index.html">
         <i class="material-icons">home</i>
     </a>
 
