--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <a class="home" href="../index.html/">
+    <a class="home" href="../index.html">
         <i class="material-icons">home</i>
     </a>
 
