<feat>: 加入手機寬度支援

--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="../public/styles/home.css">
 
     <style>
+        @import url("https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap");
         * {
+            font-family: 'Noto Sans TC', sans-serif;
             box-sizing: border-box;
         }
         
@@ -106,6 +108,32 @@
             }
         }
 
+        @media screen and (max-width: 767px;) {
+
+        }
+
+         /* Mobile */
+        @media screen and (max-width: 480px) {
+            .container {
+                 padding: 10px 10px 50px;
+                 width: 90%;
+            }
+
+            .personal_info {
+                display: flex;
+                width: 100%;
+                justify-content: center;
+            }
+            .avatar {
+                width: 120px;
+                clip-path: circle(40% at center);
+            }
+
+            .info li {
+                font-size: 14px;
+            }
+        }
+
     </style>
 </head>
 
@@ -161,7 +189,7 @@
 
         <h3>關於我</h3>
 
-        <p>我本身是射手座，對於有興趣的事物往往會一頭熱的栽進去，探究其中的原因；因為這個特質，讓我在接觸到程式時，發現程式語言的奧妙與有趣的地方，也因為學習程式語言讓我在邏輯處理方面的思維有很大的躍進，對於處裡各方面的事務更有條理。</p>
+        <p>我本身是射手座，對於有興趣的事物會一頭熱的栽進去，探究其中的原因；因為這個特質，讓我在接觸到程式時，發現程式語言的奧妙與有趣的地方，也因為學習程式語言讓我在邏輯處理方面的思維有很大的躍進，對於處裡各方面的事務更有條理。</p>
 
         <h3>工作經歷</h3>
         <p>
