<feat>: 調整 css reset

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -7,18 +7,13 @@
     <link rel="stylesheet" href="../public/styles/home.css">
     <title>專案項目</title>
     <link rel="shortcut icon" href="../public/images/favico.ico" type="image/ico">
+    <link rel="stylesheet" href="../public/styles/reset.css">
     <link rel="stylesheet" href="../public/styles/header.css">
     <link rel="stylesheet" href="../public/styles/footer.css">
     <link rel="stylesheet" href="../public/styles/home.css">
     <style>
-        * {
-            box-sizing: border-box;
-        }
-        
         body {
             background-color: #c3ded7;
-            margin: 0;
-            padding: 0;
         }
         
         .container {
