--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="public/styles/reset.css">
     <link rel="stylesheet" href="public/styles/header.css">
     <title>BingFeng</title>
     <link rel="shortcut icon" href="public/images/favico.ico" type="image/ico">
     <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
+        body {
+            background-color: white;
         }
         
         .container {
