--- a/Faq/index.html
+++ b/Faq/index.html
@@ -8,21 +8,19 @@
     <link rel="stylesheet" href="../public/styles/home.css">
     <title>FAQ</title>
     <link rel="shortcut icon" href="../public/images/favico.ico">
+    <link rel="stylesheet" href="../public/styles/reset.css">
     <link rel="stylesheet" href="../public/styles/header.css">
     <link rel="stylesheet" href="../public/styles/footer.css">
     <link rel="stylesheet" href="../public/styles/home.css">
     <style>
-        * {
+        /* * {
             margin: 0;
             padding: 0;
 			box-sizing: border-box;
-        }
+        } */
         
         body {
-            font-family: 'Lato', sans-serif;
             background-color: #c5ded7;
-            padding: 0;
-            margin: 0;
         }
         
         .container {
