<fix>: 調整各頁面導覽列 function

--- a/Faq/index.html
+++ b/Faq/index.html
@@ -187,17 +187,8 @@
     <footer>
 
     </footer>
-
+     <script src="../public/scripts/header.js"></script>
     <script>
-        function myFunction() {
-            let x = document.getElementById('myTopnav');
-
-            if (x.className === 'topnav') {
-                x.className += ' responsive';
-            } else {
-                x.className = 'topnav';
-            }
-        }
         getArticles();
 
         function getArticles() {
