--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -83,22 +83,13 @@
             <li>Linux, RaspberryPi</li>
         </ul>
         <hr>
-
     </div>
 
     <footer>
     </footer>
 
+    <script src="../public/scripts/header.js"></script>
     <script>
-        function myFunction() {
-            let x = document.getElementById('myTopnav');
-
-            if (x.className === 'topnav') {
-                x.className += ' responsive';
-            } else {
-                x.className = 'topnav';
-            }
-        }
     </script>
 
 </body>
