--- a/404.html
+++ b/404.html
@@ -10,6 +10,6 @@
 	
 </body>
 <script>
-	history.pushState(location.pathname)
+	history.pushState(null, null, location.pathname)
 </script>
 </html>
